# caps-writer-desktop

./: .gitignore  CHANGELOG.md  README.md  generate_icons.py  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build-and-release.yml  ci.yml  release.yml
scripts/: _probe.py  _probe_audio.py  capture_all_views.py  capture_views.py  capture_views_macos.py  crop_window.py  fullscreen_capture.ps1  gen_icons.py  publish_models.py  take_screenshot.ps1  verify_real_asr.sh
sidecar/: caps-writer-server.py  requirements.txt
sidecar/server/: __init__.py  asr_engine.py  llama_bindings.py  protocol.py  qwen_asr_gguf.py  qwen_encoder.py  server.py
sidecar/server/llama/: libggml-base.0.dylib  libggml-base.dylib  libggml-blas.0.15.3.dylib  libggml-blas.dylib  libggml-cpu.0.dylib  libggml-cpu.dylib  libggml.0.15.3.dylib  libggml.dylib  libllama.0.0.1.dylib  libllama.dylib
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  state.rs  tray.rs
