[package]
name = "caps-writer-desktop"
version = "0.2.0"
description = "CapsWriter Desktop - Offline Speech to Text Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "caps_writer_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
cpal = "0.15"
hound = "3.5"
tokio-tungstenite = "0.24"
futures-util = "0.3"
time = { version = "0.3", features = ["local-offset", "formatting"] }
reqwest = { version = "0.12", features = ["json"] }
